update google verification tag.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="png to jpg, png to jpg converter, convert png to jpg, png file to jpg, png to jpg image converter">
     <meta name="robots" content="index, follow">
     <meta name="author" content="PNG to JPG Converter">
+    <meta name="google-site-verification" content="oBiZDkruc1AR20O4uv8dlvf5EAnBSByai3MOL6cf_ao" />
     <title>PNG to JPG Converter – Free Online Image Conversion Tool</title>
     
     <!-- Open Graph / Facebook -->
